gcc/testsuite/algol68/compile/error-radix-2.a68
(bits b = 8r09; skip)  { dg-error "" }
